mark_up&css_reset

--- a/index.html
+++ b/index.html
@@ -2,21 +2,36 @@
 <html lang="ko">
 <head><link rel="stylesheet" type="text/css" href="index.css">
 	<meta charset="utf-8">
-	<title>자기소개</title>
+	<title>Introduction Main</title>
 </head>
 <body>
-	<hr>
-	<h1>WEB PROGRAMING</h1>
-	<h2>자기소개</h2>
-	<h3>60082367 유지현</h3>
-	<hr>
-	<ul>
-		<li>목차
-			<ol>
+	<div id="wrap">
+		<div id="top">
+			<p>60082367 | 유지현</p>
+		</div>
+		<div id="header">
+			<div id="header_left">
+				<h1>WEB PROGRAMING</h1>
+				<h2>자기소개</h2>
+			</div>
+			<div id="header_right">
+				<form>
+					<input type="text" name="search" id="search">
+					<input type="submit" value="Search" id="search_button">
+				</form>
+			</div>
+		</div>
+		<div id="navbar">
+			<ul>
+				<li><a href="index.html">HOME</a></li>
 				<li><a href="index2.html">인적사항</a></li>
 				<li><a href="index3.html">설문조사</a></li>
-			</ol>
-		</li>
-	</ul>
+			</ul>
+		</div>
+		<div id="footer">
+			<p>사이트 소개 | 이용약관 | 개인정보취급방침 | 책임의 한계화 법적 고지 | 고객센터</p>
+			<p>Copyright © Intoruduction Main. All rights reserved.</p>
+		</div>
+	</div>
 </body>
 </html>
