--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
 		</div>
 		<div id="header">
 			<div id="header_left">
-				<h1>WEB PROGRAMING</h1>
-				<h2>자기소개</h2>
+				WEB PROGRAMING
 			</div>
 			<div id="header_right">
 				<form>
 					<input type="text" name="search" id="search">
 					<input type="submit" value="Search" id="search_button">
 				</form>
-			</div>
+			</div>			
 		</div>
 		<div id="navbar">
 			<ul>
@@ -27,6 +26,10 @@
 				<li><a href="index2.html">인적사항</a></li>
 				<li><a href="index3.html">설문조사</a></li>
 			</ul>
+		</div>
+		<div id="content">
+			<P>WEB PROGRAMIN 과제</P>
+			<P>자기소개 홈페이지 개선</p>
 		</div>
 		<div id="footer">
 			<p>사이트 소개 | 이용약관 | 개인정보취급방침 | 책임의 한계화 법적 고지 | 고객센터</p>
